# LidocaineAI

./: .env.sample  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: audit.yml  test.yml
contracts/: LIDO.sol  Scanner.sol
contracts/interfaces/: IScanner.sol  IToken.sol
contracts/mocks/: MockMaliciousToken.sol  MockRugPull.sol  MockSafeToken.sol  MockScanner.sol
core/: __init__.py  scanner.py
core/models/: detector.h5
core/solana/: rpc_client.py
docs/: API.md  ARCHITECTURE.md  THREATS.md  WHITEPAPER.md
docs/examples/: quickstart.py  solana_scan.py
extension/: background.js  content.js  manifest.json
scripts/: deploy.py
tests/: test_scanner.py
tests/integration/: test_contract_detection.py  test_solana_integration.py
tests/unit/: test_models.py  test_scanner.py
